Tela Home Pronta

--- a/AJ SITE/index.html
+++ b/AJ SITE/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title>AJ ASSESSORIA</title>
 </head>
-<body class="background">
 
+<body class="background">
+    
     <div class="header">
         <img src="./imgs/Logo.png" class="Logo-Header">
         <h1 class="Text-Header">AJ Assessoria</h1>
@@ -21,11 +23,11 @@
         <div class="text-about">
             <h1 class="name-about">Anderson de <br> Jesus</h1>
             <p class="description-about">Tenho mais de duas décadas de <br>
-            experiência no mundo da assessoria <br>
-            empresarial, com um histórico <br> 
-            comprovado de ajudar empresas a <br>
-            alcançarem o sucesso.</p>
-        </div>   
+                experiência no mundo da assessoria <br>
+                empresarial, com um histórico <br>
+                comprovado de ajudar empresas <br> a
+                alcançarem o sucesso.</p>
+        </div>
     </div>
 
     <div class="what-we-do">
@@ -49,7 +51,7 @@
                 <img src="./imgs/🦆 icon pencil.png" class="IMG-pencil">
                 <h1 class="text-cards">Abertura de Micro- <br> Empreendedor Individual</h1>
             </div>
-            <button class="button-we-do"> 
+            <button class="button-we-do">
                 <h1 class="text-button">SAIBA MAIS</h1>
             </button>
         </div>
@@ -63,13 +65,122 @@
             </div>
             <div class="social-medias">
                 <div class="social-media-img">
-                    <img src="./imgs/logowhatsapp.png" class="img-logo"> <h1 class="txt-logoW">11 97524-5696</h1>
-                    <img src="./imgs/logoinstagram.png" class="img-logo"> <h1 class="txt-logoI">@anderson_js1205</h1>
-                    <img src="./imgs/logofacebook.png" class="img-logo"> <h1 class="txt-logoF">Anderson JS</h1>
+                    <button class="infos">
+                        <img src="./imgs/logowhatsapp.png" class="img-logo">
+                        <h1 class="txt-logoW">11 97524-5696</h1>
+                    </button>
+                    <button class="infos">
+                        <img src="./imgs/logoinstagram.png" class="img-logo">
+                        <h1 class="txt-logoI">@anderson_js1205</h1>
+                    </button>
+                    <button class="infos">
+                        <img src="./imgs/logofacebook.png" class="img-logo">
+                        <h1 class="txt-logoF">Anderson JS</h1>
+                    </button>
+
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="jobs">
+        <h1 class="title-job">Todos os Serviços</h1>
+        <div class="squares">
+
+            <div class="squares1">
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">Abertura de empresas</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulE.png">
+                    <h1 class="text-job">Escrituração contábil e tributária </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulM.png">
+                    <h1 class="text-job">Entrega e controle das Obrigações Acessórias <br> municipais, estaduais e federais
+                    </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">DEFIS – Declaração de Informações Socioeco- <br> nômicas e Fiscais</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulE.png">
+                    <h1 class="text-job">DIRF – Declaração de Imposto de Renda Reti- <br> do na Fonte</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulM.png">
+                    <h1 class="text-job">DeSTDA – Declaração do Simples Nacional rela- <br> tiva à SubstituiçãoTributária e
+                        ao Diferencial de <br> Alíquota</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">eSocial – Sistema de Escrituração Digital das <br> Obrigações Fiscais,
+                        Previdenciárias e Trabalhistas</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulE.png">
+                    <h1 class="text-job">SPED Contribuições – PIS e COFINS</h1>
+                </div>
+            </div>    
+
+            <div class="squares2">
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">RAIS – Relação Anual de Informações Sociais;
+                    </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulE.png">
+                    <h1 class="text-job">DCTF – Declaração de Débitos e Créditos Tributários Federais. </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulM.png">
+                    <h1 class="text-job">Emissão de Certidões Negativas de Débitos 
+                    </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">Assessoria Trabalhista</h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulE.png">
+                    <h1 class="text-job">Apuração da folha de pagamento </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/squareAzulM.png">
+                    <h1 class="text-job">Planejamento e gestão tributária </h1>
+                </div>
+
+                <div class="square-text">
+                    <img class="img-job" src="./imgs/square.png">
+                    <h1 class="text-job">Gestão financeira e orçamentária  </h1>
+                </div>
+            </div>    
+        </div>
+    </div>
+
+    <footer>
+        <h1 class="h1-footer">
+            AJ ASSESORIA - © Todos os direitos <br>
+            reservados 
+        </h1>
+    </footer>
+
+
 </body>
-</html> 
+
+</html>
