--- a/AJ SITE/pages/Abertura de Empresas/index.html
+++ b/AJ SITE/pages/Abertura de Empresas/index.html
@@ -12,7 +12,9 @@
     
     <div class="header">
         <img src="../../imgs/Logo.png" class="Logo-Header">
-        <h1 class="Text-Header">AJ Assessoria</h1>
+        <a href="/index.html">
+            <h1 class="Text-Header">AJ Assessoria</h1>
+        </a>
         <img src="../../imgs/Menu.svg" class="Menu-Icon">
     </div>
 
@@ -20,12 +22,7 @@
         <h1 class="title-job">Abertura de Empresas</h1>
         <div class="text-div">
             <h1 class="text-job">
-                Nessa atividade, há a definição da natureza jurídica da empresa, a 
-                escolha do CNAE (Cadastro Nacional de Atividades Econômicas), 
-                a definição do regime tributário (Simples Nacional, Lucro Presumido  
-                ou Lucro Real), a elaboração do contrato social, o registro na junta 
-                comercial do estado, a emissão de alvará de funcionamento, entre  
-                outras burocracias.
+                A abertura de empresas na área de assessoria empresarial engloba o processo de estabelecer uma nova entidade de negócios de acordo com a legislação. Isso inclui a escolha da estrutura legal, obtenção de licenças, elaboração de contratos e o cumprimento de obrigações fiscais e trabalhistas. A assessoria empresarial desempenha um papel vital, fornecendo orientação e expertise para garantir que o processo seja realizado de forma eficiente e dentro das normas legais.
             </h1>
         </div>  
     </div>
