--- a/AJ SITE/pages/Apuração da folha de pagamento/index.html
+++ b/AJ SITE/pages/Apuração da folha de pagamento/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>Apuração da Folha</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">Apuração da Folha de pagamento</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A apuração da folha de pagamento na área de assessoria empresarial refere-se ao processo de calcular e registrar salários, benefícios e descontos dos funcionários de uma empresa. Isso envolve cálculos complexos e conformidade com regulamentos trabalhistas e fiscais. A precisão é crucial para evitar problemas legais e financeiros. A assessoria empresarial desempenha um papel importante na garantia de conformidade e precisão nesse processo.
             </h1>
         </div>  
     </div>
