--- a/AJ SITE/pages/DCTF/index.html
+++ b/AJ SITE/pages/DCTF/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>DCTF</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">DCTF</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A DCTF (Declaração de Débitos e Créditos Tributários Federais) é um documento essencial na área de assessoria empresarial. Ele exige que as empresas informem à Receita Federal todos os débitos e créditos tributários federais, garantindo a conformidade fiscal e evitando penalidades. É crucial para a gestão financeira e contábil das organizações.
             </h1>
         </div>  
     </div>
