--- a/AJ SITE/pages/DEFIS/index.html
+++ b/AJ SITE/pages/DEFIS/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>DEFIS</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">DEFIS</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A DEFIS (Declaração de Informações Socioeconômicas e Fiscais) é uma obrigação fiscal para micro e pequenas empresas no Brasil. Ela fornece dados sobre a situação econômica e fiscal das empresas, ajudando o governo a monitorar e fiscalizar suas obrigações tributárias e sociais. Na assessoria empresarial, é importante entender e cumprir a DEFIS para garantir a conformidade fiscal das empresas de pequeno porte.
             </h1>
         </div>  
     </div>
