--- a/AJ SITE/pages/DIRF/index.html
+++ b/AJ SITE/pages/DIRF/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>DIRF</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">DIRF</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A DIRF (Declaração de Imposto de Renda Retido na Fonte) é uma obrigação fiscal importante para as empresas no Brasil. Ela consiste na declaração à Receita Federal de todos os valores de Imposto de Renda retidos na fonte de colaboradores e prestadores de serviços ao longo do ano anterior. Garante a conformidade fiscal e evita problemas tributários e multas, sendo fundamental na Assessoria Empresarial.
             </h1>
         </div>  
     </div>
