--- a/AJ SITE/pages/Planejamento e gestão tributária/index.html
+++ b/AJ SITE/pages/Planejamento e gestão tributária/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>Planejamento e gestão tributária</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">Planejamento e gestão tributária</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                O planejamento e gestão tributária em assessoria empresarial envolve estratégias para otimizar a carga de impostos de uma empresa, cumprir a legislação e mitigar riscos fiscais. Profissionais especializados auxiliam as empresas a economizarem, serem mais competitivas e crescerem de forma sustentável, sempre dentro dos limites legais.
             </h1>
         </div>  
     </div>
