--- a/AJ SITE/pages/RAIS/index.html
+++ b/AJ SITE/pages/RAIS/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>RAIS</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">RAIS</h1>
         <div class="text-div">
-            <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+            <h1 class="text-job">     
+                A RAIS (Relação Anual de Informações Sociais) é uma obrigação fiscal anual que as empresas brasileiras têm de cumprir, fornecendo dados sobre seus funcionários e remunerações. Essas informações são vitais para o governo monitorar o mercado de trabalho e elaborar políticas públicas. Na área de assessoria empresarial, o correto cumprimento da RAIS é fundamental para garantir a conformidade fiscal das empresas e evitar penalidades.
             </h1>
         </div>  
     </div>
