--- a/AJ SITE/index.html
+++ b/AJ SITE/index.html
@@ -12,7 +12,9 @@
     
     <div class="header">
         <img src="./imgs/Logo.png" class="Logo-Header">
-        <h1 class="Text-Header">AJ Assessoria</h1>
+        <a href="/index.html">
+            <h1 class="Text-Header">AJ Assessoria</h1>
+        </a>
         <img src="./imgs/Menu.svg" class="Menu-Icon">
     </div>
 
@@ -88,87 +90,117 @@
         <div class="squares">
 
             <div class="squares1">
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">Abertura de empresas</h1>
-                </div>
+                <a href="./pages/Abertura de Empresas/index.html">
+                    <button href class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">Abertura de empresas</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulE.png">
-                    <h1 class="text-job">Escrituração contábil e tributária </h1>
-                </div>
+                <a href="./pages/Escrituração e tributária/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulE.png">
+                        <h1 class="text-job">Escrituração contábil e tributária </h1>
+                    </button>    
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulM.png">
-                    <h1 class="text-job">Entrega e controle das Obrigações Acessórias <br> municipais, estaduais e federais
-                    </h1>
-                </div>
+                <a href="./pages/Entrega e controle/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulM.png">
+                        <h1 class="text-job">Entrega e controle das Obrigações Acessórias <br> municipais, estaduais e federais
+                        </h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">DEFIS – Declaração de Informações Socioeco- <br> nômicas e Fiscais</h1>
-                </div>
+                <a href="./pages/DEFIS/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">DEFIS – Declaração de Informações Socioeco- <br> nômicas e Fiscais</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulE.png">
-                    <h1 class="text-job">DIRF – Declaração de Imposto de Renda Reti- <br> do na Fonte</h1>
-                </div>
+                <a href="./pages/DIRF/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulE.png">
+                        <h1 class="text-job">DIRF – Declaração de Imposto de Renda Reti- <br> do na Fonte</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulM.png">
-                    <h1 class="text-job">DeSTDA – Declaração do Simples Nacional rela- <br> tiva à SubstituiçãoTributária e
-                        ao Diferencial de <br> Alíquota</h1>
-                </div>
+                <a href="./pages/DeSTDA/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulM.png">
+                        <h1 class="text-job">DeSTDA – Declaração do Simples Nacional rela- <br> tiva à SubstituiçãoTributária e
+                            ao Diferencial de <br> Alíquota</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">eSocial – Sistema de Escrituração Digital das <br> Obrigações Fiscais,
-                        Previdenciárias e Trabalhistas</h1>
-                </div>
+                <a href="./pages/eSocial/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">eSocial – Sistema de Escrituração Digital das <br> Obrigações Fiscais,
+                            Previdenciárias e Trabalhistas</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulE.png">
-                    <h1 class="text-job">SPED Contribuições – PIS e COFINS</h1>
-                </div>
+                <a href="./pages/SPED/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulE.png">
+                        <h1 class="text-job">SPED Contribuições – PIS e COFINS</h1>
+                    </button>
+                </a>
             </div>    
 
             <div class="squares2">
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">RAIS – Relação Anual de Informações Sociais;
-                    </h1>
-                </div>
+                <a href="./pages/RAIS/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">RAIS – Relação Anual de Informações Sociais;
+                        </h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulE.png">
-                    <h1 class="text-job">DCTF – Declaração de Débitos e Créditos Tributários Federais. </h1>
-                </div>
+                <a href="./pages/DCTF/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulE.png">
+                        <h1 class="text-job">DCTF – Declaração de Débitos e Créditos Tributários Federais. </h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulM.png">
-                    <h1 class="text-job">Emissão de Certidões Negativas de Débitos 
-                    </h1>
-                </div>
+                <a href="./pages/Emissões/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulM.png">
+                        <h1 class="text-job">Emissão de Certidões Negativas de Débitos 
+                        </h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">Assessoria Trabalhista</h1>
-                </div>
+                <a href="./pages/Assessoria Trabalhista/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">Assessoria Trabalhista</h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulE.png">
-                    <h1 class="text-job">Apuração da folha de pagamento </h1>
-                </div>
+                <a href="./pages/Apuração da folha de pagamento/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulE.png">
+                        <h1 class="text-job">Apuração da folha de pagamento </h1>
+                    </button>
+                </a>
+               
+                <a href="./pages/Planejamento e gestão tributária/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/squareAzulM.png">
+                        <h1 class="text-job">Planejamento e gestão tributária </h1>
+                    </button>
+                </a>
 
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/squareAzulM.png">
-                    <h1 class="text-job">Planejamento e gestão tributária </h1>
-                </div>
-
-                <div class="square-text">
-                    <img class="img-job" src="./imgs/square.png">
-                    <h1 class="text-job">Gestão financeira e orçamentária  </h1>
-                </div>
+                <a href="./pages/Gestão financeira e orçamentária/index.html">
+                    <button class="square-text">
+                        <img class="img-job" src="./imgs/square.png">
+                        <h1 class="text-job">Gestão financeira e orçamentária  </h1>
+                    </button>
+                </a>
             </div>    
         </div>
     </div>
