--- a/AJ SITE/pages/Assessoria Trabalhista/index.html
+++ b/AJ SITE/pages/Assessoria Trabalhista/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>Assessoria Trabalhista</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">Assessoria Trabalhista</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A assessoria trabalhista na área de assessoria empresarial oferece suporte às empresas em questões relacionadas às leis trabalhistas. Isso inclui ajudar as empresas a cumprir regulamentações, resolver conflitos e tomar decisões estratégicas relacionadas à gestão de recursos humanos. Em resumo, a assessoria trabalhista auxilia as empresas a manter um ambiente de trabalho legal, justo e produtivo.
             </h1>
         </div>  
     </div>
