--- a/AJ SITE/pages/Emissões/index.html
+++ b/AJ SITE/pages/Emissões/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>Emissão de Certidões</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">Emissão de Certidões Negativas de Débitos</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A emissão de Certidões Negativas de Débitos em assessoria empresarial envolve obter documentos que comprovam a situação financeira regular da empresa perante órgãos governamentais. Essas certidões são vitais para participar de negócios e licitações, evitando problemas legais e mantendo uma boa reputação no mercado.
             </h1>
         </div>  
     </div>
