--- a/AJ SITE/pages/Gestão financeira e orçamentária/index.html
+++ b/AJ SITE/pages/Gestão financeira e orçamentária/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>Gestão financeira</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">Gestão financeira e orçamentária</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                A gestão financeira e orçamentária na assessoria empresarial trata da administração eficiente do dinheiro e planejamento financeiro de uma empresa, visando equilíbrio financeiro e alcance de metas estratégicas. Isso envolve o controle de despesas, receitas, elaboração de orçamentos e ajustes constantes para manter a saúde financeira da organização.
             </h1>
         </div>  
     </div>
