--- a/AJ SITE/pages/eSocial/index.html
+++ b/AJ SITE/pages/eSocial/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/Escrituração e tributária/styles.css">
-    <title>Escrituração contábil</title>
+    <title>eSocial</title>
 </head>
 
 <body class="background">
@@ -19,10 +19,10 @@
     </div>
 
     <div class="div-job">
-        <h1 class="title-job">Escrituração contábil e tributária</h1>
+        <h1 class="title-job">eSocial</h1>
         <div class="text-div">
             <h1 class="text-job">
-                A escrituração contábil e tributária na área de assessoria empresarial envolve o registro e controle sistemático das transações financeiras de uma empresa. Isso é fundamental para a gestão financeira, o cumprimento de obrigações fiscais, tomada de decisões estratégicas e auditoria. Garante a transparência e eficiência financeira, permitindo a otimização da carga tributária e o sucesso sustentável da empresa.
+                O eSocial na área de assessoria empresarial é um sistema eletrônico que simplifica o envio de informações trabalhistas, previdenciárias e fiscais por empresas no Brasil. Ele visa unificar e padronizar essas informações, reduzindo a burocracia. A assessoria empresarial desempenha um papel importante ao auxiliar as empresas a cumprir as obrigações do eSocial de forma correta e evitar problemas legais.
             </h1>
         </div>  
     </div>
